fixed container_body spacing

--- a/static/src/scss/_body.scss
+++ b/static/src/scss/_body.scss
@@ -1,3 +1,8 @@
 body {
   font-family: 'Noto Sans', 'Noto Sans Coptic';
 }
+
+#content_body {
+  @extend .container;
+  padding-top: 50px;
+}
